--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
 
 /* Global */
 
+* {
+  box-sizing: border-box;
+}
 /* Header */
 
 #header-container {
@@ -22,4 +25,42 @@ header h1 {
 
 header p {
   font-size: 16px;
+}
+
+/* nav */
+nav {
+  background-color: #000000;
+  overflow: hidden;
+  position: sticky;
+  top: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ul li {
+  display: inline;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  padding: 14px 20px;
+  /* background-color: black; */
+  float: left;
+}
+
+ul li a:hover {
+  background-color: #ddd;
+  color: #000000;
+}
+
+.active {
+  background-color: #666;
+}
+
+.right {
+  float: right;
 }
