--- a/style.css
+++ b/style.css
@@ -64,3 +64,37 @@ ul li a:hover {
 .right {
   float: right;
 }
+
+/* aside */
+
+.side {
+  float: left;
+  width: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+.side span {
+  font-weight: bold;
+}
+
+.image {
+  background-color: rgb(170, 170, 170);
+  height: 200px;
+  width: 100%;
+  padding: 20px;
+}
+
+.image-2 {
+  height: 60px;
+  background-color: rgb(170, 170, 170);
+  padding: 20px;
+}
+
+/* section */
+
+.section {
+  float: right;
+  width: 70%;
+  padding: 20px;
+}
