--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+  margin: 0 0 107.8125px;
 }
 
 /* Global */
@@ -71,7 +76,7 @@ ul li a:hover {
   float: left;
   width: 30%;
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 20px 20px 100px 20px;
 }
 
 .side span {
@@ -97,4 +102,17 @@ ul li a:hover {
   float: right;
   width: 70%;
   padding: 20px;
+}
+
+/* Footer */
+
+footer {
+  width: 100%;
+  padding: 20px;
+  height: 107.8125px;
+  text-align: center;
+  background-color: #ddd;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
